--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ footer {
     <h1>Welcome to Our Hotel</h1>
     <nav>
         <ul>
-            <li><a href="Hotelweb.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="Rooms.html">Rooms</a></li>
             <li><a href="Hotelservice.html">Services</a></li>
             <li><a href="Hotelcontact.html">Contact</a></li>
